build ubah link

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_ENDPOINT="https://apiamitie.lumirainternational.com/api" # cara pakai: import.meta.env.VITE_API_ENDPOINT
-VITE_API_ENDPOINT="http://127.0.0.1:8000/api" # cara pakai: import.meta.env.VITE_API_ENDPOINT
+VITE_API_ENDPOINT="https://apiamitie.lumirainternational.com/api" # cara pakai: import.meta.env.VITE_API_ENDPOINT
+# VITE_API_ENDPOINT="http://127.0.0.1:8000/api" # cara pakai: import.meta.env.VITE_API_ENDPOINT
